@startuml
' Major classes only; value types (Vec2D, CPose) and libraries are omitted.
skinparam classAttributeIconSize 0
skinparam style strictuml

class CSimulation
class CLoopReader
class CRender
class CWallRobot
class CSensor

' Run() creates and uses local objects, not CSimulation data members.
' Association represents these uses.
CSimulation --> CLoopReader
CSimulation --> CWallRobot
CSimulation --> CRender

' The robot contains two sensor members; the diamond is at the owner.
CWallRobot *-- "2" CSensor

' Draw() receives the shared renderer by reference.
CWallRobot --> CRender
@enduml
